welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (danse=false) {
            ^BDRBuggle:4: error: recursive variable n needs type
	n=litMessage(): String
        ^BDRBuggle:5: error: not found: value A
	if (n=A) {
              ^BDRBuggle:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (n=A) {
             ^BDRBuggle:7: error: not found: value B
	} else if (n=B) {
                     ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (n=B) {
                    ^BDRBuggle:10: error: not found: value L
	} else if (n=L) {
                     ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (n=L) {
                    ^BDRBuggle:13: error: not found: value R
	} else if (n=R) {
                     ^BDRBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (n=R) {
                    ^BDRBuggle:16: error: not found: value X
	} else if (n=X) {
                     ^BDRBuggle:16: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (n=X) {
                    ^BDRBuggle:20: error: not found: value Z
	} else if (n=Z) {
                     ^BDRBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (n=Z) {
                    ^