welcome.lessons.welcome.bdr.BDR.scala.code
var danse=false//permet arret de la danse
var n=//variable pour atribuer le message
while (danse=false) {
	n=litMessage(): String
	if (n=A) {
		avance();
	} else if (n=B) {
		avance();
		avance();
	} else if (n=L) {
		gauche();
		avance();
	} else if (n=R) {
		droite();
		avance();
	} else if (n=X) {
		recule();
		recule();
		recule();
	} else if (n=Z) {
		recule();
	}
}